[package]
name = "pbxprojopt"
version = "0.1.0"
edition = "2021"
description = ".pbxproj file optimizer"
authors = ["Seth Junot"]

[[bin]]
name = "pbxprojopt"
path = "src/bin/pbxprojopt/pbxprojopt.rs"

[dependencies]
clap = { version = "4.4.17", features = ["derive"] }
pest = "2.7.6"
pest_derive = "2.7.6"
