[package]
name = "pbxprojopt"
version = "0.2.0"
edition = "2021"
description = ".pbxproj file optimizer"
authors = ["Seth Junot"]

[[bin]]
name = "pbxprojopt"
path = "src/bin/pbxprojopt/pbxprojopt.rs"

[dependencies]
ansi_term = "0.12.1"
clap = { version = "4.4.17", features = ["derive"] }
pest = "2.7.6"
pest_derive = "2.7.6"

[dev-dependencies]
pretty_assertions = "1.4.0"
